update source of tutorial

--- a/pyro_finding_MAP_MLE.ipynb
+++ b/pyro_finding_MAP_MLE.ipynb
@@ -34,7 +34,9 @@
         "colab_type": "text"
       },
       "source": [
-        "quote from: https://forum.pyro.ai/t/correct-map-guide-without-using-automatic-guide-generation/940 \n",
+        "The example below I use from: https://pyro.ai/examples/svi_part_i.html#A-simple-example\n",
+        "\n",
+        "We will start with the quote from: https://forum.pyro.ai/t/correct-map-guide-without-using-automatic-guide-generation/940 \n",
         "\n",
         "**\"If you want a MAP estimate for alpha, you need to pyro.sample it from a prior distribution in your model and delta distribution in your guide just like your second guide does with theta, rather than treating it as a constant. If you instead want a maximum likelihood estimate of alpha, you need to wrap it with a pyro.param call in the model and omit it from your guide\"**\n"
       ]
@@ -69,6 +71,13 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's define our data and train function"
+      ]
     },
     {
       "cell_type": "code",
